@@ -1,5 +1,14 @@
 2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
+    (getChartRenderingInfo): New method,
+    (isDomainZoomable): Likewise,
+    (setDomainZoomable): Likewise,
+    (isRangeZoomable): Likewise,
+    (setRangeZoomable): Likewise.
+
+2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 1977609:
     * source/org/jfree/chart/util/SerialUtilities.java
     (readShape): Handle SEG_CLOSE for GeneralPath,
